<resources>
    <string name="app_name">UTIX(test)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">insert your email here</string>
    <string name="prompt_password">input password</string>
    <string name="action_sign_in">Sign up or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_name">insert your full name</string>
    <string name="email">Email</string>
</resources>