<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/backarrowbackarrow"
        android:scaleType="centerInside"
        android:contentDescription="go to previous page"/>

    <TextView
        android:layout_below="@id/back_arrow"
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        style="@style/Header1BoldPoppins"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_login"
        android:id="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_below="@id/txt_login"
            android:id="@+id/txt_inputan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="Email"
                    style="@style/Header3medpop"
                    android:padding="5sp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    style="@style/Header3med"
                    android:hint="@string/prompt_email"
                    android:minHeight="48dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/txt_pass">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="Password"
                    style="@style/Header3medpop"
                    android:padding="5sp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_below="@id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:autofillHints="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:minHeight="48dp"
                    style="@style/Header3med"/>
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/action_log_in_short"
                android:background="@drawable/button_shape"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Header3boldpop"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/registerRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center"
                android:text="Doesn't have an account? Click here"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:clickable="true"
                android:minHeight="48dp"
                style="@style/Header3med"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_ticket"
        android:layout_below="@id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cinemadraw1"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>